// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine, notes/ basics root 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ basics root and two notes 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ basics stub note 1`] = `
Array [
  "foo.ch1.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, notes/ getNoteByPath/ get existing note with caps 1`] = `
Object {
  "body": "This is some content",
  "children": Array [],
  "created": 1603892680423,
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "000 Index",
  "links": Array [],
  "title": "000 index",
  "type": "note",
  "updated": 1603892680423,
}
`;

exports[`engine, notes/ init/ with backlinks/ multiple links : bond 1`] = `
Object {
  "alpha": Object {
    "body": "[[beta]],[[beta]]
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "alpha",
    "id": "alpha",
    "links": Array [
      Object {
        "alias": "beta",
        "from": Object {
          "fname": "alpha",
          "id": "alpha",
        },
        "original": "beta",
        "pos": Object {
          "end": 8,
          "start": 0,
        },
        "to": Object {
          "fname": "beta",
        },
        "type": "wiki",
        "value": "beta",
      },
      Object {
        "alias": "beta",
        "from": Object {
          "fname": "alpha",
          "id": "alpha",
        },
        "original": "beta",
        "pos": Object {
          "end": 17,
          "start": 9,
        },
        "to": Object {
          "fname": "beta",
        },
        "type": "wiki",
        "value": "beta",
      },
      Object {
        "from": Object {
          "fname": "beta",
          "vault": Object {
            "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-astuWJ38ZJgV",
          },
        },
        "original": "alpha",
        "pos": Object {
          "end": 9,
          "start": 0,
        },
        "type": "backlink",
        "value": "alpha",
      },
    ],
    "parent": "ff6fe540-8913-47b6-8771-686c67f477b1",
    "title": "Alpha",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-astuWJ38ZJgV",
    },
  },
  "beta": Object {
    "body": "[[alpha]]
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "beta",
    "id": "beta",
    "links": Array [
      Object {
        "alias": "alpha",
        "from": Object {
          "fname": "beta",
          "id": "beta",
        },
        "original": "alpha",
        "pos": Object {
          "end": 9,
          "start": 0,
        },
        "to": Object {
          "fname": "alpha",
        },
        "type": "wiki",
        "value": "alpha",
      },
      Object {
        "from": Object {
          "fname": "alpha",
          "vault": Object {
            "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-astuWJ38ZJgV",
          },
        },
        "original": "beta",
        "pos": Object {
          "end": 8,
          "start": 0,
        },
        "type": "backlink",
        "value": "beta",
      },
      Object {
        "from": Object {
          "fname": "alpha",
          "vault": Object {
            "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-astuWJ38ZJgV",
          },
        },
        "original": "beta",
        "pos": Object {
          "end": 17,
          "start": 9,
        },
        "type": "backlink",
        "value": "beta",
      },
    ],
    "parent": "ff6fe540-8913-47b6-8771-686c67f477b1",
    "title": "Beta",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-astuWJ38ZJgV",
    },
  },
  "ff6fe540-8913-47b6-8771-686c67f477b1": Object {
    "body": "
",
    "children": Array [
      "alpha",
      "beta",
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "ff6fe540-8913-47b6-8771-686c67f477b1",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-astuWJ38ZJgV",
    },
  },
  "foo": Object {
    "body": "
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": "ff6fe540-8913-47b6-8771-686c67f477b1",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-astuWJ38ZJgV",
    },
  },
  "foo.ch1": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-astuWJ38ZJgV",
    },
  },
}
`;

exports[`engine, notes/ init/ with backlinks/: bond 1`] = `
Object {
  "528813ba-3b71-4655-bb76-e5b44415c6c6": Object {
    "body": "
",
    "children": Array [
      "alpha",
      "beta",
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "528813ba-3b71-4655-bb76-e5b44415c6c6",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-ONtoU9t7apCi",
    },
  },
  "alpha": Object {
    "body": "[[beta]]
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "alpha",
    "id": "alpha",
    "links": Array [
      Object {
        "alias": "beta",
        "from": Object {
          "fname": "alpha",
          "id": "alpha",
        },
        "original": "beta",
        "pos": Object {
          "end": 8,
          "start": 0,
        },
        "to": Object {
          "fname": "beta",
        },
        "type": "wiki",
        "value": "beta",
      },
      Object {
        "from": Object {
          "fname": "beta",
          "vault": Object {
            "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-ONtoU9t7apCi",
          },
        },
        "original": "alpha",
        "pos": Object {
          "end": 9,
          "start": 0,
        },
        "type": "backlink",
        "value": "alpha",
      },
    ],
    "parent": "528813ba-3b71-4655-bb76-e5b44415c6c6",
    "title": "Alpha",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-ONtoU9t7apCi",
    },
  },
  "beta": Object {
    "body": "[[alpha]]
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "beta",
    "id": "beta",
    "links": Array [
      Object {
        "alias": "alpha",
        "from": Object {
          "fname": "beta",
          "id": "beta",
        },
        "original": "alpha",
        "pos": Object {
          "end": 9,
          "start": 0,
        },
        "to": Object {
          "fname": "alpha",
        },
        "type": "wiki",
        "value": "alpha",
      },
      Object {
        "from": Object {
          "fname": "alpha",
          "vault": Object {
            "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-ONtoU9t7apCi",
          },
        },
        "original": "beta",
        "pos": Object {
          "end": 8,
          "start": 0,
        },
        "type": "backlink",
        "value": "beta",
      },
    ],
    "parent": "528813ba-3b71-4655-bb76-e5b44415c6c6",
    "title": "Beta",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-ONtoU9t7apCi",
    },
  },
  "foo": Object {
    "body": "
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": "528813ba-3b71-4655-bb76-e5b44415c6c6",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-ONtoU9t7apCi",
    },
  },
  "foo.ch1": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-43435-ONtoU9t7apCi",
    },
  },
}
`;

exports[`engine, notes/ query/ * 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ query/ empty string 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ query/ foo 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ rename/ with note ref 1`] = `
Array [
  "bar.md",
  "baz.md",
  "foo.ch1.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, notes/ write/ write note, match schema: notes 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ write/ write note, no schema, new domain 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "bar",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "links": Array [],
    "title": "Bar",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, schema/ delete/ delete non-root 1`] = `
Array [
  "foo.ch1.md",
  "foo.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`note and schema basics/ root and two notes 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "links": Array [],
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "links": Array [],
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
]
`;
